# browser-cli

./: .gitignore  Cargo.toml  build_and_update
src/: cli.rs  main.rs  url_handler.rs
src/url_handler/: browser_command_handler.rs  mod.rs  url_input.rs
src/url_handler/url_macro_handler/: mod.rs  url_macro_handler.rs
