[package]
name = "bropen"
version = "2.0.0"
authors = ["astherath <me@felipearce.dev>"]
edition = "2021"
description = "A small browser CLI"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12"
clap="2.33.3"
shellexpand = "2.1.0"
fuzzy-matcher = "0.3.7"
serde_json = "1.0"
